[tool.poetry]
name = "streamlit-colored-sortables"
version = "0.4.0"
description = "A Streamlit component to provide a colored sortable list."
license = "MIT"
authors = ["Gabriel Rodrigues <gabriel@rdrgs.com.br>", "ohtaman <ohtamans@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/gRodrigues03/streamlit-colored-sortables"
keywords = ["streamlit", "sortable", "list", "component"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
exclude = ["streamlit_sortables/frontend/**/*"]
include = ["streamlit_sortables/frontend/build/**/*"]

[tool.poetry.dependencies]
python = "!=3.9.7,>=3.9"
streamlit = ">=1.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
